add info section

--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -27,7 +27,6 @@
             <div class="ppHeader">
                 <figure>
                     <img src="static/pitt_logo.png">
-                    <!--            <h1 class="ppTitle">Communication Science and Disorders </h1>-->
                     <span class="ppTitle">Communication Science and Disorders </span>
                 </figure>
                 <ul>
@@ -187,6 +186,8 @@
 
         </article>
     </section>
+
+    <section id="info"></section>
 
     <section id="testArea"></section>
 
