--- a/FlaskApp/templates/nafc.html
+++ b/FlaskApp/templates/nafc.html
@@ -1,199 +1,200 @@
-<!DOCTYPE html>
-<html>
-
+<!doctype html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>NAFC</title>
-  <script src="{{url_for('static', filename='jquery-3.2.1.min.js')}}"></script>
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <style>
-    body {
-      padding-top: 50px;
-      background: black;
-    }
-    label {
-      padding-top: 5px;
-      color: rgba(255, 255, 255, 0.5);
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>psylab</title>
+    <link rel="shortcut icon" type="image/jpg" href="static/favicon.ico"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&display=swap" rel="stylesheet">
 
-      font-size: 14pt;
-      font-family: "Verdana", cursive, sans-serif;
-    }
-    buttonText {
-      color: #000; /* Fallback for older browsers */
-      color: rgba(0, 0, 0, 0.5);
-
-      font-size: 10pt;
-      font-weight: bold;
-      font-family: "Verdana", cursive, sans-serif;
-    }
-   .button {
-     background-color: #555555; /* Black */
-     padding: 2px 4px;
-     color: #b7b7b7;
-     text-align: center;
-     font-size: 16px;
-     margin: 10px 5px;
-   }
-
-  </style>
+    <link rel="stylesheet" href="static/project.css">
 </head>
-
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <a class="navbar-brand" href=".">Home</a>
-        <a class="navbar-brand" href="./nafc">NAFC</a>
-	<button class="btn button" onclick="toggleFullScreen(document.body)">Full Screen</button>
-      <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <section id="welcome" class="active">
+        <div class="logoArea"><img src="static/index.svg" alt="psylab"></div>
+        <div class="contextArea">
+            <p>
+                Press "<code>Start</code>" button or "<code>Space</code>" to start test.
+            </p>
+            <button id="startTest" type="submit">Start</button>
+        </div>
+    </section>
 
-  <div class="container">
-    <label>Random Sound</label>
-    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-      <div class="btn-group" role="group">
-        <button type="button" id="randomSound" class="btn btn-default toggleOutlet" onclick="getSound(this)">
-          <buttonText>Get random sound from server</buttonText>
-        </button>
-      </div>
-    </div>
+    <section id="kvkk">
+        <article>
 
-    <label>Select Sound</label>
-    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-      <div class="btn-group" role="group">
-        <button type="button" id="guitarSound" class="btn btn-default toggleOutlet" onclick="changeSound(this)">
-          <buttonText>Guitar</buttonText>
-        </button>
-      </div>
-      <div class="btn-group" role="group">
-        <button type="button" id="pluckSound" class="btn btn-default toggleOutlet" onclick="changeSound(this)">
-          <buttonText>Pluck</buttonText>
-        </button>
-      </div>
-      <div class="btn-group" role="group">
-        <button type="button" id="claveSound" class="btn btn-default toggleOutlet" onclick="changeSound(this)">
-          <buttonText>Clave</buttonText>
-        </button>
-      </div>
-    </div>
+            <div class="ppHeader">
+                <figure>
+                    <img src="static/pitt_logo.png">
+                    <span class="ppTitle">Communication Science and Disorders </span>
+                </figure>
+                <ul>
+                    <li>6035 Forbes Tower
+                        <br> Pittsburgh, PA 15260
+                    </li>
+                    <li>Tel: <a href="javascript:;">412-383-6540</a> </li>
+                    <li>Fax: <a href="javascript:;">412-383-6555</a> </li>
+                    <li>Web: <a href="javascript:;">https://www.shrs.pitt.edu/CSD/</a> </li>
+                </ul>
 
-    <label>Play Sound</label>
-    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-      <audio id="audioWav">
-        <source src="static/audio/guitar.wav">
-      </audio>
-      <div class="btn-group" role="group">
-        <button type="button" name="0" value="on" class="btn btn-default toggleOutlet" onclick="playAudio(this);">
-          <buttonText>Play</buttonText>
-        </button>
-      </div>
-      <div class="btn-group" role="group">
-        <button type="button" name="0" value="off" class="btn btn-default toggleOutlet" onclick="document.getElementById('audioWav').pause();">
-          <buttonText>Pause</buttonText>
-        </button>
-      </div>
-      <div class="btn-group" role="group">
-        <button type="button" name="0" value="off" class="btn btn-default toggleOutlet" onclick="document.getElementById('audioWav').pause(); document.getElementById('audioWav').currentTime = 0;">
-          <buttonText>Stop</buttonText>
-        </button>
-      </div>
-      <div class="btn-group" role="group">
-        <button type="button" id="loop1" value="off" class="btn btn-default toggleOutlet" onclick="colorChange(this);">
-          <buttonText>Loop</buttonText>
-        </button>
-      </div>
-    </div>
-  </div>
+            </div>
+            <br>
+            <br>
+            <h2 class="ppTitle">Online Consent to Act as a Participant in a Research Study</h2>
+            <br>
+            <h5 class="ppTitle">Title: Perceptual processing of complex sounds</h5>
 
+            <h5 class="ppTitle">Principal Investigator: <span class="ppContent">Christopher Brown, Ph.D., Associate Professor, Communication Sciences and Disorders, University of Pittsburgh, cbrown1@pitt.edu</span></h5>
+
+            <h5 class="ppTitle">Funding Source: <span class="ppContent">National Institutes of Health (1 R21 DC018408-01A1)</span></h5>
+            <br>
+            <h3 class="ppTitle">Introduction </h3>
+            <p class="ppContent">
+                The purpose of this form is to provide you information that may affect your decision as to whether or not to participate in this research study.
+                Read the information below and decide whether to take part in the study. If you decide to be involved in this study, this form will be used to
+                record your consent.
+            </p>
+            <br>
+            <h3 class="ppTitle"> Purpose of the Study </h3>
+
+            <p class="ppContent">
+                The study investigates how the auditory perceptual system processes complex sounds. The goal is to better understand the normal healthy auditory system,
+                in order to ultimately help those with hearing impairment.
+            </p>
+
+            <br>
+
+            <h3 class="ppTitle">Who is being asked to take part in this study?</h3>
+
+            <p class="ppContent">
+                People invited to participate in this study must be 18 years of age or older.
+            </p>
+
+            <br>
+
+            <h3 class="ppTitle">What will you be asked to do?</h3>
+
+            <p class="ppContent">
+                If you agree to take part, you may be asked to listen to sounds that will be presented at comfortable listening levels through headphones,
+                and make judgments, recall certain words, or discriminate certain aspects of the sounds like how loud they are, or which is higher in pitch.
+            </p>
+
+            <br>
+            <h3 class="ppTitle">Total Estimated Time to Participate: <span class="ppContent"> Maximum of 2 hours for behavioral sessions</span></h3>
+
+            <p class="ppContent">
+                Inclusion Criteria. To participate in this study, you must meet the following criteria:
+            </p>
+            <ul>
+                <li class="ppContent">Age 18 or older</li>
+                <li class="ppContent">Reside in the United States</li>
+            </ul>
+            <br>
+
+            <h3 class="ppTitle">What are the risks involved in this study?</h3>
+            <p class="ppContent">
+                You will not be asked to do anything you find uncomfortable. You will initially be asked to set the sound levels to ensure that the intensity of
+                sounds presented during the experiment does not exceed comfortable limits. There is a risk that you may feel fatigued. There are no other physical
+                or psychological risks associated in this study itself beyond that of daily activities.
+            </p>
+            <br>
+
+            <h3 class="ppTitle">What are the possible benefits of this study?</h3>
+            <p class="ppContent">
+                There will be no direct benefits to subjects associated with participation.
+            </p>
+            <br>
+
+            <h3 class="ppTitle">Do you have to participate?</h3>
+            <p class="ppContent">
+                No, your participation is voluntary. You may decide not to participate at all, or, if you start the study, you may withdraw at any time.
+                Your decision to withdraw from this study will have no effect on your current or future relationship with the University of Pittsburgh.
+            </p>
+            <br>
+
+            <h3 class="ppTitle">Will there be any compensation?</h3>
+            <p class="ppContent">University of Pittsburgh students may choose course credit as compensation, with instructor approval. Otherwise, you will
+                receive monetary compensation for your participation. Monetary compensation will be $10/hour for your participation. You will be compensated
+                for your time at the end of the session.
+            </p>
+            <br>
+
+
+            <h3 class="ppTitle">How will your privacy and confidentiality be protected if you participate in this research study?</h3>
+            <p class="ppContent">
+                Data collected during testing will be stored in a password-protected computer without any identifiable information. These laboratory computers
+                will only be accessible to study team members. All data are coded, so that your name or other identifying information is never directly associated
+                with the stored data. Per University of Pittsburgh policy, all research records must be maintained for at least 7 years following final reporting or
+                publication of a project.
+            </p>
+            <br>
+            <p class="ppContent">
+                Authorized representatives of the University of Pittsburgh Office of Research Protections may review your research information
+                for the purpose of monitoring the appropriate conduct of this research study. The data resulting from your participation may be made
+                available to other researchers in the future for research purposes not detailed within this consent form. In these cases, the data will
+                contain no identifying information that could associate it with you, or with your participation in any study.
+            </p>
+            <br>
+            <p class="ppContent">
+                To help us protect your privacy, we have obtained a Certificate of Confidentiality from the National Institutes of Health.
+                The researchers can use this Certificate to legally refuse to disclose information that may identify you in any federal, state,
+                or local civil, criminal, administrative, legislative, or other proceedings, for example, if there is a court subpoena.
+                The researchers will use the Certificate to resist any demands for information that would identify you, except as explained below:
+            </p>
+            <ul>
+                <li class="ppContent">The certificate cannot be used to resist a demand for information from personnel of the United States Government that is used for auditing or
+                    evaluation of federally-funded projects or for information that must be disclosed in order to meet the requirements of the federal Food and Drug
+                    Administration.
+                </li>
+                <li class="ppContent">
+                    You should understand that a Certificate of Confidentiality does not prevent you or a member of your family from voluntarily releasing
+                    information about yourself or your involvement in this research. If an insurer, employer, or other person obtains your written consent
+                    to receive research information, then the researchers may not use the Certificate to withhold that information.
+                </li>
+                <li class="ppContent">
+                    The Certificate of Confidentiality will not be used to prevent disclosure to state or local authorities of abuse and neglect, or harm to self or others.
+                </li>
+            </ul>
+            <br>
+            <h3 class="ppTitle">Whom to contact with questions about the study?  </h3>
+            <p class="ppContent">Prior, during or after your participation you can contact the principal investigator,
+                Dr. Christopher Brown, by sending an email to <a href="cbrown1@pitt.edu">cbrown1@pitt.edu</a> with any questions or if you feel that you have been harmed.
+            </p>
+            <br>
+
+            <h3 class="ppTitle">Whom to contact with questions concerning your rights as a research participant?</h3>
+            <p class="ppContent">
+                If you have any questions about your rights as a research subject or wish to talk to someone other than the research team, please call the
+                University of Pittsburgh Human Subjects Protection Advocate toll-free at 866-212-2668.
+            </p>
+            <br>
+            <h3 class="ppTitle">Consent</h3>
+            <p class="ppContent">
+                The above information has been explained to me and all of my current questions have been answered. I understand that I may always request that my
+                questions, concerns or complains be addressed by a listed investigator. I understand that I may contact Human Subjects Protection Advocate of
+                the IRB Office, University of Pittsburgh (1-866-212-2668) to discuss problems, concerns, and questions; obtain information; offer input; or
+                discuss situations that occurred during my participation. Please click here for a copy of this consent form to keep for your records.
+            </p>
+            <p class="ppContent">
+                To indicate my agreement to participate in this research study, I consent to participate in the study by clicking the ‘I agree’ box below.
+            </p>
+            <br>
+            <input type="checkbox" id="agreeCheck" name="agreeCheck">
+            <label for="agreeCheck"> I agree</label><br>
+            <button type="button" disabled id="agreeBtn">ACCEPT</button>
+
+        </article>
+    </section>
+
+    <section id="info"></section>
+
+    <section id="testArea"></section>
+
+    <section id="stop"></section>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="static/project.js"></script>
 </body>
-<script>
-  let serverResponse;
-  let selectedSound = "guitarSound";
-
-  async function getSound(objButton) {
-    var data = {'id': objButton.id, 'value': objButton.value};
-    $.ajaxSetup({async: false});
-    serverResponse = $.post("/postmethod", data);
-    let audioFile = await serverResponse.responseJSON[0];
-    document.getElementById('audioWav').src = audioFile;
-    let audioName = audioFile.split("/")[2].split(".")[0];
-    document.getElementById('randomSound').innerHTML = "<b>" + audioName + "</b>";
-    document.getElementById('audioWav').load();
-  }
-
-  async function playAudio(objButton) {
-    document.getElementById('audioWav').play();
-    objButton.style.backgroundColor = "green";
-    let ms = document.getElementById('audioWav').duration * 1000
-    await new Promise(r => setTimeout(r, ms));
-    objButton.style.backgroundColor = "white";
-  }
-
-  async function changeSound(objButton) {
-    if (objButton.id == "guitarSound") {
-      document.getElementById('audioWav').src = "static/audio/guitar.wav";
-      objButton.style.backgroundColor = "green";
-    }
-    if (objButton.id == "pluckSound") {
-      document.getElementById('audioWav').src = "static/audio/pluck.wav";
-      objButton.style.backgroundColor = "green";
-    }
-    if (objButton.id == "claveSound") {
-      document.getElementById('audioWav').src = "static/audio/clave.wav";
-      objButton.style.backgroundColor = "green";
-    }
-    document.getElementById('audioWav').load();
-    if (selectedSound != objButton.id) {
-      document.getElementById(selectedSound).style.backgroundColor = "white";
-      selectedSound = objButton.id;
-    }
-  }
-
-    function colorChange(objButton) {
-      var button = document.getElementById(objButton.id);
-      if (button.value == "off") {
-        document.getElementById(objButton.id).value = "on";
-        document.getElementById(objButton.id).style.backgroundColor = "green";
-        document.getElementById('audioWav').loop = true;
-      } else {
-        document.getElementById(objButton.id).value = "off";
-        document.getElementById(objButton.id).style.backgroundColor = "white";
-        document.getElementById('audioWav').loop = false;
-      }
-    }
-
-    function toggleFullScreen(elem) {
-    // ## The below if statement seems to work better ## if ((document.fullScreenElement && document.fullScreenElement !== null) || (document.msfullscreenElement && document.msfullscreenElement !== null) || (!document.mozFullScreen && !document.webkitIsFullScreen)) {
-    if ((document.fullScreenElement !== undefined && document.fullScreenElement === null) || (document.msFullscreenElement !== undefined && document.msFullscreenElement === null) || (document.mozFullScreen !== undefined && !document.mozFullScreen) || (document.webkitIsFullScreen !== undefined && !document.webkitIsFullScreen)) {
-        if (elem.requestFullScreen) {
-            elem.requestFullScreen();
-        } else if (elem.mozRequestFullScreen) {
-            elem.mozRequestFullScreen();
-        } else if (elem.webkitRequestFullScreen) {
-            elem.webkitRequestFullScreen(Element.ALLOW_KEYBOARD_INPUT);
-        } else if (elem.msRequestFullscreen) {
-            elem.msRequestFullscreen();
-        }
-    } else {
-        if (document.cancelFullScreen) {
-            document.cancelFullScreen();
-        } else if (document.mozCancelFullScreen) {
-            document.mozCancelFullScreen();
-        } else if (document.webkitCancelFullScreen) {
-            document.webkitCancelFullScreen();
-        } else if (document.msExitFullscreen) {
-            document.msExitFullscreen();
-        }
-    }
-  }
-</script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
 </html>
