--- a/FlaskApp/static/home.css
+++ b/FlaskApp/static/home.css
@@ -335,7 +335,7 @@ ul{
     display: flex;
     flex-flow: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 .usersPages .experimentPage .experimentArea{
     width: calc(100% / 3);
