add buttons to kill processes, improve process tracking

--- a/FlaskApp/templates/setup.html
+++ b/FlaskApp/templates/setup.html
@@ -28,6 +28,9 @@
     <div class="observingPage" style="display: none"></div>
     <div class="observingBottom" style="display: none">
         <div>
+            <span><button id="killGustavBtn">Kill Experiment</button></span>
+            <span><button id="killAllBtn">Kill All</button></span>
+            <span><button id="cleanupBtn">Cleanup</button></span>
             <span>Max ports: <input type="number" name="max-ports"></span>
             <span>Base ports: <input type="number" name="base-ports"></span>
         </div>
