add refresh button, remove style

--- a/FlaskApp/templates/setup.html
+++ b/FlaskApp/templates/setup.html
@@ -28,6 +28,7 @@
     <div class="observingPage" style="display: none"></div>
     <div class="observingBottom" style="display: none">
         <div>
+            <span><button id="refreshBtn">Refresh</button></span>
             <span><button id="killGustavBtn">Kill Experiment</button></span>
             <span><button id="killAllBtn">Kill All</button></span>
             <span><button id="cleanupBtn">Cleanup</button></span>
