add lateralization html, js and css

--- a/FlaskApp/templates/lateralization.html
+++ b/FlaskApp/templates/lateralization.html
@@ -8,13 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="shortcut icon" type="image/jpg" href="static/favicon.ico"/>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 
-    <link rel="stylesheet" href="static/speech.css">
+    <link rel="stylesheet" href="static/lateralization.css">
 </head>
 <body>
     <section id="welcome" class="active">
         <div class="logoArea"><img src="static/index.svg" alt="psylab"></div>
-        <div class="logoArea"><img src="static/img/head-white.svg" alt="psylab"></div>
         <div class="contextArea">
             <p>
                 Press "<code>Start</code>" button or "<code>Space</code>" to start test.
@@ -198,6 +198,7 @@
     <section id="stop"></section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="static/speech.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="static/lateralization.js"></script>
 </body>
 </html>
